--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
@@ -18,7 +19,7 @@
             android:id="@+id/back_arrow"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_arrow_back"
+            android:src="@drawable/chevron_left"
             android:tint="#FFFFFF"
             android:layout_marginEnd="16dp"
             android:clickable="true"
@@ -37,8 +38,9 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_heart"
+            android:src="@drawable/heart"
             android:layout_marginEnd="16dp"
+            app:tint="#FFFFFF"
             android:clickable="true"
             android:focusable="true" />
 
@@ -46,10 +48,10 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_search"
-            android:tint="#FFFFFF"
+            android:src="@drawable/search"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true"
+            app:tint="#FFFFFF" />
     </LinearLayout>
 
     <!-- Food Item List -->
@@ -112,7 +114,7 @@
                     android:id="@+id/decrease_quantity_1"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_remove"
+                    android:src="@drawable/remove"
                     android:tint="#FFA726"
                     android:layout_marginEnd="8dp"
                     android:clickable="true"
@@ -131,7 +133,7 @@
                     android:id="@+id/increase_quantity_1"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_add"
+                    android:src="@drawable/plus"
                     android:tint="#FFA726"
                     android:clickable="true"
                     android:focusable="true" />
@@ -189,7 +191,7 @@
                     android:id="@+id/decrease_quantity_2"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_remove"
+                    android:src="@drawable/remove"
                     android:tint="#FFA726"
                     android:layout_marginEnd="8dp"
                     android:clickable="true"
@@ -208,7 +210,7 @@
                     android:id="@+id/increase_quantity_2"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_add"
+                    android:src="@drawable/plus"
                     android:tint="#FFA726"
                     android:clickable="true"
                     android:focusable="true" />
