--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,7 @@
             android:id="@+id/heart_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_heart"
+            android:src="@drawable/heart"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true" />
@@ -50,7 +50,7 @@
             android:id="@+id/search_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_search"
+            android:src="@drawable/search"
             android:background="#FFFFFF"
             android:clickable="true"
             android:focusable="true" />
